# CRDT-Project

./: .gitignore  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci-cd.yml
backend/: GCounter.cpp
crdt-lib/: CMakeLists.txt
crdt-lib/build-wasm/: CMakeCache.txt  Makefile  cmake_install.cmake  crdt_wasm.js  crdt_wasm.wasm
crdt-lib/include/: crdt_c_api.h  gcounter.hpp  gset.hpp  line_segment.hpp  rga.hpp
crdt-lib/src/: bindings.cpp  crdt_c_api.cpp  gcounter.cpp
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: crdt_wasm.js  crdt_wasm.wasm
frontend/src/: App.tsx  index.css
frontend/src/components/: RoomBanner.tsx
frontend/src/lib/: crdt.ts  network.ts  room.ts  wasm-loader.ts
frontend/src/pages/: About.tsx  GCounterDemo.tsx  GCounterOnline.tsx  GSetDemo.tsx  GSetOnline.tsx  Home.tsx  RGADemo.tsx  RGAOnlineDemo.tsx
scripts/: generate-bindings.mjs
server/: CMakeLists.txt
server/src/: main.cpp
